--- a/frontend/src/app/admin/admin-products/admin-products.component.html
+++ b/frontend/src/app/admin/admin-products/admin-products.component.html
@@ -23,13 +23,13 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of collection | paginate: { itemsPerPage: 20, currentPage: p }">
+                    <tr *ngFor="let product of products">
                         <td></td>
-                        <td>FO-DR-JP-TI2004</td>
-                        <td>FO-DR-JP-TI2004</td>
+                        <td>{{product._id}}</td>
+                        <td>{{product.name}}</td>
                         <td>FO, DR</td>
-                        <td>10 </td>
-                        <td>$3.99</td>
+                        <td>{{product.qty}} </td>
+                        <td>{{product.price}}</td>
                         <td style="font-size: 16px;">
                             <a routerLink="/admin/products/new" 
                             style="color: yellowgreen;" 
