--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -2,6 +2,7 @@
     font-size: 20px;
 }
 
+
 .shopping-cart{
     width: 22px;
     height: 23px;
@@ -155,7 +156,6 @@ top: 0px;
     background: white;
     box-shadow: inset 0 0 0 2px var(--den);
     top: 9px;
-    left: 10px;
     transition: 0.2s;
     transform: rotate(45deg);
     z-index: -1;
@@ -193,6 +193,19 @@ top: 0px;
     transition: 0.2s;
     right: 0;
 }
+
+/*
+.cuc:after {
+    position: absolute;
+    font-family: "Font Awesome 5 Free";
+    content: "\f002";
+    font-size: 18px;
+    font-weight: 900;
+    z-index: -1;
+    left: 14px;
+    transition: 0.2s;
+}
+*/
 
 .dropdo:focus {
     background: #ffe033;
@@ -241,7 +254,6 @@ top: 0px;
     border: 2px solid var(--den);
     border-bottom: none;
     position: relative;
-    background: transparent;
     margin-top: 11px;
    }
    
@@ -407,7 +419,7 @@ right: 23px;
 }
 */
 
-.haha:active:after {
+.haha:hover:after {
 width: 24px;
 height: 2px;
 transform:rotate(45deg);
@@ -417,7 +429,7 @@ top: 10px;
 background: transparent;
 }
 
-.haha:active:before {
+.haha:hover:before {
     transform: rotate(45deg);
     right: 10px;
     height: 24px;
@@ -441,20 +453,13 @@ background: transparent;
     width: 100%;
 }
 
+
 #collapseExample {
     visibility: hidden;
 }
 
 input:focus {
     box-shadow: none;
-}
-
-.collapse input{
-    background: white;
-}
-
-.tiny-search {
-    display: none;
 }
 
 @media only screen and (max-width:800px) {
@@ -467,93 +472,9 @@ input:focus {
         visibility: visible;
     }
 
-    .tiny-search {
-        display: block;
-    }
-
-    #collapseExample {
-        visibility: visible;
-    }
     
+#collapseExample {
+    visibility: visible;
 }
 
-
-@media only screen and (min-width:800px) {
-    #collapseExample {
-        display: none;
-    }
-    
 }
-
-
-
-
-
-
-
-
-
-/* KHU VỰC ĐANG THI CÔNG */
-/* đang làm toggle bằng radio cho thanh search khi thu nhỏ màn hình */
-
-.tiny-search {
-    position: relative;
-    cursor: pointer;
-  height: 30px;
-  width:30px;
-  margin-right:10px;
-  margin-top:4px
-  }
-  
-  .tiny-search input {
-    position: absolute;
-    cursor: pointer;
-    z-index:2;
-    opacity: 0;
-    height: 30px;
-    width: 30px;
-  }
-
-  .checkmark {
-   position: absolute;
-    width: 16px;
-    height: 16px;
-    content: " ";
-    display: block;
-    border-radius: 100px;
-    background: white;
-    box-shadow: inset 0 0 0 2px var(--den);
-    top: 0;
-    transition: 0.2s;
-  }
-
-  .tiny-search input:checked ~ .checkmark {
-width: 24px;
-height: 2px;
-transform:rotate(45deg);
-border: none;
-border-radius: 0;
-top: 10px;
-background: transparent;
-  }
-
-  .tiny-search input:checked ~ .checkmark:after {
-          transform: rotate(0deg);
-    height: 24px;
-top:-11px ;
-left :11px;
-  }
-
-  .tiny-search .checkmark:after {
-    position: absolute;
-    width: 2px;
-    height:10px;
-    background: var(--do);
-    content: " ";
-    display: block;
-    border-radius: 100px;
-    top:12px;
-    right: -2px;
-    transform: rotate(-45deg);
-    transition: 0.2s;
-  }
