--- a/frontend/src/app/forgetpassword/forgetpassword.component.html
+++ b/frontend/src/app/forgetpassword/forgetpassword.component.html
@@ -2,15 +2,17 @@
         <div class="login-form">
         <h1 style="font-weight: bolder; margin-top: 60px;" class="text-center">Forgot Password</h1>
         <p style="margin-bottom: 40px; " class="text-center">New password will be sent to your email</p>
-
+        <form [formGroup]="resetForm">
             <input 
+            formControlName="mail"
+             name = "mail"
                 id="username"
                 type="text" 
                 placeholder="Email">  
-    
+        </form>
 
         <div id="wrapper">
-           <button class="btn" data-target="#myModal" data-toggle="modal">Submit</button></div>
+           <button class="btn" (click)=" onreset()" data-target="#myModal" data-toggle="modal">Submit</button></div>
         
 
 
