--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,8 +1,6 @@
  section {
-   display: flex;
-   flex-direction: row;
-   padding-top: 50px;
-   justify-content: center;
+     padding-top: 20px;
+    margin-top: 20px;
 
  }
 
@@ -13,6 +11,13 @@
     padding: 20px;
 padding-top: 0;
     margin: 0 auto;
+}
+
+@media (max-width:500px) {
+    .login-form {
+        width:470px;
+
+    }
 }
 
 .col {
@@ -45,7 +50,7 @@ input {
     width: 100%;
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
 .flex-c-m {
@@ -65,17 +70,11 @@ input {
     padding-left: 20px;
     padding-right: 20px;
     height : 55px;
-    box-shadow: none;
 }
 
 .btn:hover {
     background: #d93a3a ;
 }
-
-.btn:focus {
-    background: #d93a3a ;
-}
-
 
 p{
     margin-bottom:2px;
@@ -147,39 +146,8 @@ p a:hover {
     padding-right: 5px;
     font-weight: 600;
  }
-
- .headline {
-    margin-bottom: 35px; 
- font-weight: bolder;
- }
  
-
  .alert-danger {
     color: #d93a3a;
+    border-top: 3px solid #d93a3a;
  }
-
- 
-@media (max-width:700px) {
-    .login-form {
-        width: 100%;
-    }
-    
- .headline {
- font-size: 30px;
- margin-bottom: 10px;
- margin-top: -25px;
- }
-
- #wrapper {
-    flex-direction: column;
-  }
-
-  .col {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-  }
- }
- 
- 
