--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <section>
     <div class="login-form">
-    <h1 class="headline text-center">Login</h1>
+    <h1 style="margin-bottom: 35px; font-weight: bolder;" class="text-center">Login</h1>
+
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
    
     <div class="form-group">
@@ -31,15 +32,22 @@
                     <div *ngIf="f.password.errors.required"> Password required</div>
             </div>
     </div>
-    <div id="wrapper">    
-        <button class="btn">Log In</button>
+    <div id="wrapper">    <button class="btn">Log In</button>
     <div class="col">
                 <p> <a routerLink="/forgetpassword"> Forgot Password</a></p>
                 <p>New Customer?  <a routerLink="/sign-up" class="register"> Register</a></p>
 
     </div>
     </div>
+<!--
+    <p style = "padding-top: 12px; font-size: 13px; color: #8f8f8f; text-align: center;">Or Login with</p>
+     <div class="flex-c-m">
+            <button class="btn-circle" style="background: #4267b2; color:white"><i class="fa fa-facebook-f fa-lg"></i></button>
+            <button class="btn-circle" style="background: #ea4335; color:white"><i class="fa fa-google fa-lg"></i></button>
+            
+    </div> -->
   
+    
 </form>
 </div>
 </section>
