--- a/frontend/src/app/search/search.component.css
+++ b/frontend/src/app/search/search.component.css
@@ -8,6 +8,9 @@
     border: 1px solid #dddddd;
     align-items: center;
 }
+.container1 {
+    padding: 0;
+}
 
 .flex-container {
     display: flex;
@@ -170,7 +173,6 @@ input[type=search]::-webkit-search-cancel-button {
 
 }
 
-
 .box-4 {
     flex: 1;
     height: 48px;
@@ -180,6 +182,22 @@ input[type=search]::-webkit-search-cancel-button {
     right: -10px;
     margin-right: -19px;
     margin-left: 5px;
+}
+.product-view {
+    padding: 20px 40px 7px 40px;
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.product-row-view {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    column-gap: 0 !important;
+    row-gap: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 .fa-refresh:hover {
