--- a/frontend/src/app/signup/signup.component.css
+++ b/frontend/src/app/signup/signup.component.css
@@ -1,31 +1,28 @@
 section {
-   display: flex;
-   flex-direction: row;
-   padding-top: 50px;
-   justify-content: center;
-   padding-bottom: 100px;
-
- }
+    padding-top: 20px;
+   margin-top: 20px;
+}
 
 .alert {
    text-align: right;
-   height: 10px;
+   height: 30px;
    border: none;
    background: transparent;
    border-radius: 0;
    padding-top: 5px;
    padding-right: 5px;
    font-weight: 600;
-   font-size: 14px;
 }
 
 
 .alert-danger {
    color: #d93a3a;
+   border-top: 3px solid #d93a3a;
 }
 
 .alert-success {
    color: yellowgreen;
+   border-top: 3px solid yellowgreen;
 }
 
 .login-form {
@@ -37,11 +34,14 @@ section {
    margin: 0 auto;
 }
 
-.headline {
-   margin-bottom: 35px; 
-font-weight: bolder;
-}
 
+
+@media (max-width:500px) {
+   .login-form {
+       width:470px;
+
+   }
+}
 
 .name {
     display: flex;
@@ -82,28 +82,8 @@ label {
    width: 100%;
    display: flex;
    flex-direction: row;
-   justify-content: space-between;
    margin-top: 30px;
  }
-
- .btn-link {
-    background: none !important;
-    color: var(--den) !important;
-    border: 3px solid var(--den) !important;
- }
-
- .btn-link:hover {
-   background: var(--den) !important;
-   color: white !important;
-   border: 3px solid var(--den) !important;
-}
-
-.btn-link:focus {
-   background: var(--den) !important;
-   color: white !important;
-   border: 3px solid var(--den) !important;
-   box-shadow: none !important;
-}
 
 .flex-c-m {
    display: -webkit-box;
@@ -127,19 +107,12 @@ label {
    padding-left: 20px;
    padding-right: 20px;
    height : 55px;
-   text-decoration: none;
 }
 
 .btn:hover {
  background: #d93a3a;
  transition: 0.1s;
 }
-
-.btn:focus {
-   background: #d93a3a;
-   transition: 0.1s;
-   box-shadow: none;
-  }
 
 p{
    margin-bottom:2px;
@@ -157,27 +130,4 @@ p a:hover {
    color: #d93a3a;
 }
 
-
-
-@media (max-width:700px) {
-   .login-form {
-       width: 100%;
-   }
-
-   #wrapper {
-      flex-direction: column-reverse;
-
-   }
-
-   .btn {
-      margin-bottom: 20px;
-   }
-
-   
-.headline {
-font-size: 30px;
-margin-bottom: 10px;
-margin-top: -25px;
-}
-}
 
