--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,8 +1,30 @@
 <section>
         <div class="login-form">
-        <h1 class="headline text-center">Sign Up</h1>
+        <h1 style="margin-bottom: 35px; font-weight: bolder;" class="text-center">Sign Up</h1>
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-
+       <!--
+            <div class="name">
+                    <div class="form-group" >
+                            <label> First Name </label>
+                            <input 
+                                formControlName="firstname"
+                                id="firstname"
+                                type="text" 
+                                class="form-control"
+                                placeholder="Cuong">  
+                        </div>
+    
+                    <div class="form-group">
+                                <label> Last Name </label>
+                                <input 
+                                    formControlName="lastname"
+                                    id="lastname"
+                                    type="text" 
+                                    class="form-control"
+                                    placeholder="Nguyen"> 
+                            </div>
+            </div>  
+            -->
         <div class="form-group" >
             <label>Name</label>
             <input 
@@ -59,11 +81,12 @@
                         <div *ngIf="f.password.errors.minlength"> Password should be minimum 6 characters</div>
                 </div>
         </div>
-        <div id="wrapper">                   
-                 <button routerLink="/login" class="btn btn-link">Cancel</button>
-                <button class="btn">Sign Up</button>
-
+        <div id="wrapper">    <button class="btn">Sign Up</button>
+                <div class="col">
+                        <p> <a [routerLink]="['/login']" >Cancel</a></p>
+            </div>
         </div>
+        
     </form>
     </div>
     </section>
