--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,63 +1,82 @@
 <div class="navbar navbar-expand-lg">
 
   <div class="row">
-  
+
     <div class="column">
       <a class="navbar-brand" routerLink="/">
         <logo routerLink="/"></logo>
       </a>
-    </div>
-  
-    <div class="col">
 
-     <div class="tiny-search" id="small" >
-          <input type="checkbox">
-      <span class="checkmark"></span>
-        </div>
-  
-      <div class="container cuc" id="big">
-        <input type="search" class="search" placeholder="Search">
+
+    </div>
+
+    <div class="col">
+<!-- nút search hiện khi ở màn hình điện thoại -->
+      <div class="tiny-search" id="small" data-toggle="collapse" data-target="#collapse-search" aria-expanded="false" aria-controls="collapse-search">
+        <input type="checkbox">
+        <span class="checkmark"></span>
       </div>
-  
-      <div [ngSwitch]="loading" >
-        <div *ngSwitchCase="false">
-  <a class="nav-link" routerLink="/login" style="margin-left: -10px;">Login</a>
+
+      <form [formGroup]="searchForm" id="big">
+        <div class="container cuc">
+          <a class="search-button" (click)="onsearch()"> <i class="fas fa-minus"></i> </a>
+          <input formControlName="search" name="search" type="search" class="search" placeholder="Search">
         </div>
-  
-  
-        <!-- Phần code này Vy làm mới lại nè, bỏ my info ra ngoài luôn nhưng mà hình như ko có hiện tên user khi dăng nhập ukm đúng r ko hiện-->
-        <div *ngSwitchCase="true">
-  
-                <a class="nav-link drod-togg" routerLink="/my/info/{{user._id}}" class="drod-togg" id="dropdown01" 
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="user-icon"></div>
-                </a>
-  
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                  <a class="dropdown-item"routerLink="/my/info/{{user._id}}">My Info</a>
-                  <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-                  <a class="dropdown-item logout" (click)="logout()" >Log Out</a>
-                </div>
-  
-          </div>
+
+      </form>
+
+      <div [ngSwitch]="loading">
+
+        <div *ngSwitchCase="false" class="d-flex flex-row ">
+          <a class="nav-link" routerLink="/login" style="margin-right: -10px; margin-left: -10px;">Login</a>
+          <a class="nav-link" routerLink="/sign-up">Sign-Up</a>
         </div>
-  
-        <a class="nav-link cucu" routerLink="/shopping-cart">
-          <div class="cart">
-            <button class="shopping-cart">
-              <span class="cart-status">0</span>
-              <span class="cart-status-2">0</span>
-            </button>
-          </div>
-        </a>
-  
       
+
+        <div *ngSwitchCase="true">
+
+          <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
+
+          <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="firstname" *ngIf="anonymousUser"> Firstname </span> <i class="user-icon"></i></a>
+
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <a class="arrow"></a> <!-- hover để hiện dropdownnên phải có cái này giữa icon user và dropdown để ko bị mất hover 
+my info C phải bỏ vào đây để ko bị hư responsive 
+-->
+            <a class="dropdo first" routerLink="/my/info/{{user._id}}">My Info</a>
+            <a class="dropdo" routerLink="/my/orders">My Orders</a>
+            <a class="dropdo" routerLink="/admin/orders">Manage Orders</a>
+            <a class="dropdo" routerLink="/admin/products">Manage Products</a>
+            <a class="dropdo logout" (click)="logout()">Log Out</a>
+          </div>
+
+        </div>
+
+      </div> 
+    <a class="nav-link cucu" routerLink="/shopping-cart">
+      <div class="cart">
+        <button (click)="onsetcard()" class="shopping-cart">
+          <span class="cart-status">0</span>
+          <span class="cart-status-2">0</span>
+        </button>
+      </div>
+    </a>
     </div>
   </div>
-  
+
+
+
+
+</div>
+
     <!-- ô search hiện ra khi nhấn zô nút search ở màn hình nhỏ -->
-    <div class="collapse" id="collapseExample">
-      <input type="search" class="search" placeholder="Search">
+    <div class="collapse" id="collapse-search">
+      <form [formGroup]="searchForm">
+        <div class="container search-box d-flex flex-row">
+          <input formControlName="search" name="search" type="search" class="search" placeholder="Search">          
+           <a class="search-button" (click)="onsearch()"> <i class="fas fa-minus"></i> </a>
+        </div>
+
+      </form>
     </div>
-  
-  </div>
