--- a/frontend/src/app/bs-navbar/bs-navbar.component.css
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.css
@@ -357,6 +357,7 @@ ul {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-right: 13px;
 }
 
 logo:focus {
@@ -453,6 +454,10 @@ background: transparent;
     visibility: hidden;
 }
 
+#collapse-sign {
+    visibility: hidden;
+}
+
 input:focus {
     box-shadow: none;
 }
@@ -466,6 +471,7 @@ input:focus {
 }
 
 @media only screen and (max-width:800px) {
+
     #big {
         visibility: hidden;
         display: none;
@@ -481,6 +487,10 @@ input:focus {
     }
 
     #collapse-search {
+        visibility: visible;
+    }
+
+    #collapse-sign {
         visibility: visible;
     }
 
@@ -505,11 +515,38 @@ margin-right: 5px;
 margin-left: 10px;
     }
 
+    .log {
+        width: 30px;
+        margin-left: 10px;
+        margin-right: 8px;
+    }
+
+    .col-sign {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+    }
+
+    .col-sign .nav-link {
+    line-height: 30px;
+        font-size: 16px;
+    }
+
+    .collapse-sign {
+        padding-bottom: 20px;
+        padding-right: 20px;
+    }
+
+
 }
 
 
 @media only screen and (min-width:800px) {
     #collapse-search {
+        display: none;
+    }
+
+    .collapse-sign {
         display: none;
     }
     
@@ -585,6 +622,88 @@ left :11px;
     top:12px;
     right: -2px;
     transform: rotate(-45deg);
+    transition: 0.2s;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+/* KHU VỰC ĐANG THI CÔNG */
+/* đang làm toggle bằng radio cho thanh search khi thu nhỏ màn hình */
+
+.tiny-sign {
+    position: relative;
+    cursor: pointer;
+  height: 30px;
+  width:30px;
+  margin-top: -52px;
+  margin-right: 9px;
+  }
+  
+  .tiny-sign input {
+    position: absolute;
+    cursor: pointer;
+    z-index:2;
+    opacity: 0;
+    height: 30px;
+    width: 30px;
+  }
+
+  .ham-menu {
+   position: absolute;
+    width: 30px;
+    height: 30px;
+    content: " ";
+    display: block;
+    border-radius: 100px;
+    background: white;
+    top: 0;
+    transition: 0.2s;
+  }
+
+  .tiny-sign input:checked ~ .ham-menu:after {
+          transform: rotate(-45deg);
+
+  }
+
+  .tiny-sign input:checked ~ .ham-menu:before {
+transform: rotate(45deg);
+height: 2px;
+top: 10px;
+}
+
+  .tiny-sign .ham-menu:after {
+    position: absolute;
+    width: 24px;
+    height:2px;
+    background: #d93a3a;
+    content: " ";
+    display: block;
+top: 10px;
+    transition: 0.2s;
+  }
+
+  
+  .tiny-sign .ham-menu:before {
+    position: absolute;
+height: 22px;
+width: 24px;
+box-shadow: inset 0 2px 0 0 #242424,
+inset 0 -2px 0 0 #242424;
+    content: " ";
+    display: block;
     transition: 0.2s;
   }
 
